finally got NCL linked

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,15 +32,26 @@ ELSE()
 ENDIF()
 SET(INSTALL_CMAKE_DIR ${DEF_INSTALL_CMAKE_DIR} CACHE PATH "Installation directory for CMake files")
 
+# NCL (hard-coded for now)
+set(NCL_INSTALL_DIR ext/v2.1/build/installed)
+set(NCL_INCLUDE_DIR ext/v2.1/build/installed/include)
+set(NCL_LIBRARY_DIR ext/v2.1/build/installed/lib/ncl)
+
 # Set library source directory variable
 SET(MAIN_PSTRUDEL_SOURCE_DIR
     ${PROJECT_SOURCE_DIR}/pstrudel CACHE PATH "Directory of main source code")
 
 # Set include directories
 INCLUDE_DIRECTORIES(
-  "${PROJECT_BINARY_DIR}"               # to find foo/config.h
-  ext/v2.1/build/installed/include/     # for NCL
+  "${PROJECT_BINARY_DIR}"   # to find foo/config.h
+  "${NCL_INCLUDE_DIR}"      # for NCL
     )
+
+# Libraries
+find_library(NCL_LIBRARY ncl PATHS ${NCL_LIBRARY_DIR})
+set(NCL_LIBRARIES ${NCL_LIBRARY} )
+# set(NCL_LIBRARIES ${NCL_LIBRARIES} debug ${NCL_LIBRARY_DIR}/libncl.a)
+# set(NCL_LIBRARIES ${NCL_LIBRARIES} optimized ${NCL_LIBRARY_DIR}/libncl.dylib)
 
 # Compiler flags
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
