--- a/version.h.in
+++ b/version.h.in
@@ -1,1 +1,5 @@
-#define PROJECT_GIT_SHA1 "@GIT_SHA1@"
+#define PROJECT_GIT_REFSPEC         "@GIT_REFSPEC@"
+#define PROJECT_GIT_SHA1            "@GIT_SHA1@"
+#define PROJECT_GIT_SHA1_SHORT      "@GIT_SHA1_SHORT@"
+#define PROJECT_GIT_BRANCH          "@GIT_BRANCH@"
+#define PROJECT_GIT_COMMIT_DATE     "@GIT_COMMIT_DATE@"
