--- a/version.h.in
+++ b/version.h.in
@@ -3,3 +3,4 @@
 #define PROJECT_GIT_SHA1_SHORT      "@GIT_SHA1_SHORT@"
 #define PROJECT_GIT_BRANCH          "@GIT_BRANCH@"
 #define PROJECT_GIT_COMMIT_DATE     "@GIT_COMMIT_DATE@"
+#define PROJECT_SOURCE_DESC         "@GIT_SHA1_SHORT@ [on @GIT_BRANCH@]: @GIT_COMMIT_DATE@"
