--- a/version.h.in
+++ b/version.h.in
@@ -3,4 +3,4 @@
 #define PROJECT_GIT_SHA1_SHORT      "@GIT_SHA1_SHORT@"
 #define PROJECT_GIT_BRANCH          "@GIT_BRANCH@"
 #define PROJECT_GIT_COMMIT_DATE     "@GIT_COMMIT_DATE@"
-#define PROJECT_SOURCE_DESC         "@PROJECT_SOURCE_IDENTIFIER@"
+#define PROJECT_SOURCE_IDENTIFIER   "@PROJECT_SOURCE_IDENTIFIER@"
