more elaborate, but probably better way to check for source

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,8 +30,9 @@ get_git_head_revision(
     GIT_COMMIT_DATE)
 IF (GIT_SHA1)
     SET(PROJECT_SOURCE_IDENTIFIER "${GIT_SHA1_SHORT} [on ${GIT_BRANCH}]: ${GIT_COMMIT_DATE}")
+    SET(PROJECT_SOURCE_IDENTIFIED 1)
 ELSE()
-    SET(PROJECT_SOURCE_IDENTIFIER "")
+    SET(PROJECT_SOURCE_IDENTIFIED 0)
 ENDIF()
 FILE(WRITE ${PROJECT_BINARY_DIR}/version.h.in
 "
@@ -41,6 +42,7 @@ FILE(WRITE ${PROJECT_BINARY_DIR}/version.h.in
 #define PROJECT_GIT_BRANCH          \"@GIT_BRANCH@\"
 #define PROJECT_GIT_COMMIT_DATE     \"@GIT_COMMIT_DATE@\"
 #define PROJECT_SOURCE_IDENTIFIER   \"@PROJECT_SOURCE_IDENTIFIER@\"
+#define PROJECT_SOURCE_IDENTIFIED      @PROJECT_SOURCE_IDENTIFIED@
 ")
 configure_file("${PROJECT_BINARY_DIR}/version.h.in" "${PROJECT_BINARY_DIR}/version.h" @ONLY)
 
