reformatting commit info

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ get_git_head_revision(
     GIT_BRANCH
     GIT_COMMIT_DATE)
 IF (GIT_SHA1)
-    SET(PROJECT_SOURCE_IDENTIFIER "${GIT_SHA1_SHORT} [on ${GIT_BRANCH}]: ${GIT_COMMIT_DATE}")
+    SET(PROJECT_SOURCE_IDENTIFIER "${GIT_BRANCH} ${GIT_SHA1_SHORT}: ${GIT_COMMIT_DATE}")
     SET(PROJECT_SOURCE_IDENTIFIED 1)
 ELSE()
     SET(PROJECT_SOURCE_IDENTIFIED 0)
