--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,8 +25,8 @@ SET(PROJECT_VERSION
 ##############################################################################
 ## Versioning
 
-INCLUDE(CreateProjectSourceIdentificationCXX)
-create_CXX_version_file()
+INCLUDE(TrackGitRevision)
+create_CXX_git_version_info_file()
 
 # Offer the user the choice of overriding the installation directories
 # set(INSTALL_LIB_DIR lib CACHE PATH "Installation sub-directory for libraries")
