--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,7 @@ SET(NCL_LIBRARIES ${NCL_LIBRARY} )
 ##############################################################################
 ## Testing
 ENABLE_TESTING ()
+ADD_SUBDIRECTORY(test)
 
 ##############################################################################
 ## Sources
